[package]
name = "auto_morph"
version = "0.1.2"
edition = "2024"

[dependencies]
copypasta = "0.10.2"
eframe = { version = "0.31.1", default-features = true, features = [
    "default_fonts",
	"wgpu",         
] }
egui-file-dialog = "0.10.0"
enigo = "0.5.0"
objc = "0.2"
rdev = "0.5.3"

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.25.0"
core-foundation = "0.10.1" 

[package.metadata.bundle]
name = "AutoMorpher"
identifier = "com.spcrptools.automorpher" 
icon = ["assets/rocket-lunch.png"] 
version = "0.1.1"
category = "Developer Tool"
short_description = "An application for automating morph commands."
long_description = """
An application that listens for a global hotkey to automate typing morph commands into the roblox game SCP: Roleplay.
"""

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true            
debug = false
incremental = false
